--- a/package.json
+++ b/package.json
@@ -20,8 +20,16 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
-    ]
+      "react-app/jest",
+      "plugin:prettier/recommended"
+    ],
+    "plugins": [
+      "simple-import-sort"
+    ],
+    "rules": {
+      "simple-import-sort": "error",
+      "import/order": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -34,5 +42,36 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.12.10",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "7.2.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "4.0.0",
+    "eslint-plugin-testcafe": "^0.2.1",
+    "prettier": "^2.2.1",
+    "riteway": "^6.2.1",
+    "tap-nirvana": "^1.1.0",
+    "testcafe": "^1.10.1",
+    "watch": "^1.0.2"
+  },
+  "lint": "echo 'ESLinting...' && eslint --ignore-path .gitignore . && echo 'ESLint complete'",
+  "format": "yarn --silent lint --fix && echo 'Linting automated code fix complete.'",
+  "unit-tests": "NODE_ENV=test node -r @babel/register -r @babel/polyfill ./src/index.test.js",
+  "watch": "watch 'clear && yarn -s unit-tests | tap-nirvana && yarn -s format' src",
+  "debug": "NODE_ENV=test node --inpsect-brk -r @babel/register -r @babel/polyfill ./src/index.test.js",
+  "functional-tests": "testcafe 'chrome:headless' src/functional-tests/"
 }
